--- a/static/css/manage-container.css
+++ b/static/css/manage-container.css
@@ -96,6 +96,10 @@
   margin: 1.5em;
 }
 
+.metadata {
+  display: grid;
+}
+
 .metadata .text-input {
   display: flex;
   flex-direction: column;
